Hero section coming soon text

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 #      Main Configs       #
 # ----------------------- #
 
-title: Robostox
+title: Robostox - Tools and reports every week on tech stocks and crypto.
 author: Daniel Easterman
-description: Tools and weekly reports on tech stocks and crypto for the 21st century investor.
+description: Tools and reports every week on tech stocks and crypto.
 copyright: ""
 
 # ----------------------- #
